# rich-tde

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
dev/dev/: helpers.py
docs/: mkdocs.yml
docs/docs/: getting-started.md  index.md
jobs/: apptainerrich.slurm  make-run.sh  make-submit.sh  newrich.slurm  plot_slice_n_projection.py  python.sh  python.slurm  rich.slurm
jobs/ShockTube/: .gitignore  Makefile  build.sh  ics.py  run.sh
notebooks/: 0.1-adiabatic-index.ipynb  0.1-analytics-radiative-processes.ipynb  0.1-plots-eccentricity.ipynb  0.1-plots-proj-compare-no-mask-match.ipynb  0.1-plots-proj-resolution.ipynb  0.1-rich-running-test.ipynb  0.1-shock-finder.ipynb  0.1-shocktube-dissipation-test-all.ipynb  0.2-adiabatic-index-in-tde.ipynb  0.2-dissipation-analytic-shock.ipynb  0.2-first-feature-richio.ipynb  0.2-play-around-sedov-test.ipynb  0.3-2d3d-sedov-test.ipynb  0.3-dissipation-analytic-shock.ipynb  0.3-richio-showcase.ipynb  2.0-plots-HiRes.ipynb  2.2-plots-HiRes.ipynb  2.3-slice-proj-HiRes.ipynb
richio/: __init__.py  config.py  data.py  dataset.py  features.py  plots.py  units.py
richio/styles/: nice.mplstyle
scripts/: make_gif.py
tests/: test_job_4900319.out  test_slurm.sh
