[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "richio"
version = "0.0.1"
description = "Study of tidal disruption event with the RICH simulation."
authors = [
  { name = "Yujie He" },
]
dependencies = [
  "numpy",
  "h5py",
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = ">=3.10"


[tool.ruff]
line-length = 99
src = ["richio"]
include = ["pyproject.toml", "richio/**/*.py", "richio/styles/*.mplstyle"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["richio"]
force-sort-within-sections = true

